# MLC

./: FEATURES.md  README.md  TESTING.md
CLI/: README.md  UPDATE_LOG.txt  main.py  pyproject.toml
CLI/cleaners/: browser_cleaner.py  health_manager.py
CLI/core/: auth.py  controller.py
CLI/mlc_cli/: main.py
CLI/mlc_cli/cleaners/: app_cleaner.py  deep_cleaner.py  engine.py  package_manager.py  system_cleaner.py
CLI/mlc_cli/core/: controller.py
CLI/mlc_cli/tools/: analyzers.py
CLI/mlc_cli/ui/: views.py
CLI/ui/: renderer.py  views.py
PyCleaner/: UPDATE_LOG.txt  app.py  backend.py  requirements.txt
PyCleaner/cleaners/: __init__.py  app_cleaner.py  browser_cleaner.py  dev_cleaner.py  engine.py  system_cleaner.py
PyCleaner/tools/: __init__.py  analyzers.py  backup.py
PyCleaner/ui/: animator.py  components.py  dashboard.py  design_system.py  dev_view.py  explorer.py  graph.py  health_view.py  info_view.py  optimizer_view.py  process_view.py  scan_view.py  sound.py  themes.py  toolbox_view.py
